<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddRecord"
    android:background="@color/colorA09">

    <TextView
        android:id="@+id/loginTvTitle"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:text="@string/login_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/loginEtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTvTitle"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/login_usuario"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/loginTvTitle"
        tools:layout_editor_absoluteX="0dp"
        android:maxLength="15"/>

    <EditText
        android:id="@+id/loginEtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginEtUsername"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/login_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginEtUsername"
        tools:layout_editor_absoluteX="0dp"
        android:maxLength="15"/>

    <Button
        android:id="@+id/loginBtnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorB02"
        android:text="@string/login_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEtPassword" />

    <TextView
        android:id="@+id/loginTvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtnSignIn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/login_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtnSignIn" />

    <TextView
        android:id="@+id/loginTvRegister"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/loginTvOr"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/login_register"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtnSignIn" />

    <CheckBox
        android:id="@+id/loginCbRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/login_remember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toEndOf="@+id/loginBtnSignIn"
        app:layout_constraintTop_toBottomOf="@+id/loginEtPassword" />

</android.support.constraint.ConstraintLayout>