<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Unlock"
    android:background="@color/colorA08">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.AddRecord">

        <TextView
            android:id="@+id/unlockTvTitle"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="8dp"
            android:text="@string/unlock_ingrese_el_pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/unlockEtPin"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/unlockTvTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/unlock_pin"
            android:inputType="text|numberPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unlockTvTitle"
            android:maxLength="4"/>

        <Button
            android:id="@+id/unlockBtnAccept"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/unlockEtPin"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="8dp"
            android:text="@string/unlock_accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unlockEtPin"
            android:background="@color/colorB02"/>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>