<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EditRecord">



    <TextView
        android:id="@+id/editRecordTvTitle"
        android:layout_width="302dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:text="Edit Record"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/editRecordEtWebSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editRecordTvTitle"
        android:layout_marginTop="28dp"
        android:hint="@string/add_record_web_site"
        app:layout_constraintTop_toBottomOf="@+id/editRecordTvTitle"
        tools:layout_editor_absoluteX="0dp"
        android:inputType="text"
        android:maxLength="30"/>

    <EditText
        android:id="@+id/editRecordEtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editRecordEtWebSite"
        android:layout_marginTop="8dp"
        android:hint="@string/add_record_email"
        app:layout_constraintTop_toBottomOf="@+id/editRecordEtWebSite"
        tools:layout_editor_absoluteX="0dp"
        android:inputType="textEmailAddress"
        android:maxLength="50"/>

    <EditText
        android:id="@+id/editRecordEtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editRecordEtEmail"
        android:layout_marginTop="20dp"
        android:hint="@string/add_record_password"
        app:layout_constraintTop_toBottomOf="@+id/editRecordEtEmail"
        tools:layout_editor_absoluteX="16dp"
        android:inputType="textPassword"
        android:maxLength="30"/>

    <Button
        android:id="@+id/editRecordBtnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editRecordEtPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:text="Save edited"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRecordEtPassword"
        android:background="@color/colorB02"/>


</android.support.constraint.ConstraintLayout>